k8s/bitcoin/service-bitcoin.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitcoind
  namespace: bitcoin
spec:
  clusterIP: None
  selector:
    app: bitcoind
  ports:
    - name: p2p
      port: 18444
    - name: rpc
      port: 18443
