k8s/bitcoin/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bitcoin-default-deny
  namespace: bitcoin
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bitcoind-p2p-within-namespace
  namespace: bitcoin
spec:
  podSelector:
    matchLabels:
      app: bitcoind
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: bitcoind
      ports:
        - protocol: TCP
          port: 18444
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: bitcoind
      ports:
        - protocol: TCP
          port: 18444
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rpc-from-middleware
  namespace: bitcoin
spec:
  podSelector:
    matchLabels:
      app: bitcoind
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: nameDerMiddleWare
      ports:
        - protocol: TCP
          port: 18443
